--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,10 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.18",
     "react": "^18.3",
     "react-dom": "^18.3",
+    "react-router-dom": "^7.12.0",
     "thirdweb": "^5"
   },
   "devDependencies": {
@@ -24,8 +26,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.19",
     "typescript": "^5.2.2",
-    "vite": "^4"
+    "vite": "^7.3.1"
   }
 }
