--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
+    "@thirdweb-dev/chains": "^0.1.120",
+    "@thirdweb-dev/react": "^4.9.4",
+    "ethers": "^5.8.0",
     "react": "^18.3",
     "react-dom": "^18.3",
     "react-router-dom": "^7.12.0",
-    "thirdweb": "^5"
+    "thirdweb": "^5.116.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
